# GameBoyEmulator

./: .gitignore  CMakeLists.txt  README.md  STUBS_TO_ADD.txt  debug_rom.cpp
docs/: DEV_TOOLS.md  generate_opcodes.py
roms/: .gitkeep
src/: STUB_NOTES.txt  display.cpp  display.h  emulator.cpp  emulator.h  main.cpp  savestate.cpp  savestate.h
src/audio/: apu.cpp  apu.h
src/cpu/: cpu.cpp  cpu.h  instructions.cpp
src/graphics/: ppu.cpp  ppu.h
src/input/: joypad.cpp  joypad.h
src/memory/: cartridge.cpp  cartridge.h  mmu.cpp  mmu.h
src/timer/: timer.cpp  timer.h
src/utils/: types.h
